fix(dialog): wrap instead of truncating (#2334)

--- a/src/less/lightbox-dialog/lightbox-dialog.less
+++ b/src/less/lightbox-dialog/lightbox-dialog.less
@@ -61,7 +61,7 @@
 // Might need to see if icon-btn can support a small version
 button.icon-btn.lightbox-dialog__prev,
 button.icon-btn.lightbox-dialog__close {
-    align-self: center;
+    align-self: flex-start;
     border: 0;
     height: 32px;
     min-width: 32px;
