--- a/src/less/toast-dialog/toast-dialog.less
+++ b/src/less/toast-dialog/toast-dialog.less
@@ -65,8 +65,9 @@
 
 // inherits from .icon-btn
 button.toast-dialog__close {
-    align-self: center;
+    align-self: flex-start;
     border: 0;
+    flex-shrink: 0;
     .color-token(toast-dialog-foreground-color, color-foreground-on-information);
     // margin: 0 0 0 auto;
     margin-inline-start: auto;
